--- a/NetEvent/Client/Pages/Administration/AdminMenu.razor
+++ b/NetEvent/Client/Pages/Administration/AdminMenu.razor
@@ -17,7 +17,7 @@
     </Authorized>
 </AuthorizeView>
 <MudDivider />
-<AuthorizeView Policy="Admin.SystemInfo.Read">
+<AuthorizeView Policy="Admin.SystemInfo.*">
     <Authorized>
         <MudButton Variant="Variant.Text" DisableElevation="true" Color="Color.Default" Href="administration/systeminfo" Match="NavLinkMatch.Prefix">@Localize["Administration.AdminMenu.SystemInfo"]</MudButton>
         <MudDivider />
