--- a/NetEvent/Client/Components/ImageValueTypeUpload.razor
+++ b/NetEvent/Client/Components/ImageValueTypeUpload.razor
@@ -1,21 +1,28 @@
 ﻿@inject Microsoft.Extensions.Localization.IStringLocalizer<App> Localize
 
-<MudPaper @ondragenter="@SetDragClass" @ondragleave="@ClearDragClass" @ondragend="@ClearDragClass" Height="300px" Outlined="true" Class="@DragClass">
+
+
+@*<MudField @ondragenter="@SetDragClass" @ondragleave="@ClearDragClass" @ondragend="@ClearDragClass" Height="300px" Outlined="true" Class="@DragClass">*@
+<MudField Label="@Localize[SystemSetting.LabelKey]" HelperText="@(string.IsNullOrEmpty(SystemSetting.DescriptionKey) ? string.Empty : Localize[SystemSetting.DescriptionKey])" Variant="Variant.Outlined" Class="@DragClass" @ondragenter="@SetDragClass" @ondragleave="@ClearDragClass" @ondragend="@ClearDragClass">
     @if (!Clearing)
     {
         <InputFile OnChange="OnInputFileChanged" class="absolute mud-width-full mud-height-full overflow-hidden z-2" style="opacity:0;" accept=".jpg, .jpeg, .png" />
     }
-    <MudText Typo="Typo.h6">Drag and drop image here or click</MudText>
+
+    @if (string.IsNullOrEmpty(imageFileName))
+    {
+        <MudText Typo="Typo.h6">Drag and drop image here or click</MudText>
+    }
 
     @if (uploading)
     {
         <MudProgressCircular Color="Color.Primary" Size="Size.Large" Indeterminate="true" />
         <MudChip Color="Color.Dark" Text="@fileName?.Name" />
     }
-   
+
     @if (!string.IsNullOrEmpty(imageFileName))
     {
         <MudImage Src="@imageSrc"></MudImage>
     }
 
-</MudPaper>
+</MudField>
