Add NavigationBar back

--- a/NetEvent/Client/Shared/MainLayout.razor
+++ b/NetEvent/Client/Shared/MainLayout.razor
@@ -18,7 +18,10 @@
                 <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
             </Authorized>
         </AuthorizeView>
-        <MudImage Src="@_Logo" Class="img-logo"></MudImage>
+        @if (!string.IsNullOrEmpty(_Logo))
+        {
+            <MudImage Src="@_Logo" Class="img-logo"></MudImage>
+        }
         <h1>@_OrganizationName</h1>
         <MudSpacer />
         @*<MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />*@
