--- a/NetEvent/Client/wwwroot/css/style.css
+++ b/NetEvent/Client/wwwroot/css/style.css
@@ -6,3 +6,26 @@
     max-height: 80%;
     margin-right: 1em;
 }
+
+.show-on-hover {
+    display: none;
+}
+
+    .mud-field:hover .show-on-hover, .show-on-hover:hover {
+        display: inline-block;
+    }
+
+.container {
+    position: relative;
+    width: 50%;
+}
+
+    .container .center-in-container {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        width: 100%;
+        height: 100%;
+    }
