--- a/NetEvent/Client/Components/ImageValueTypeUpload.razor
+++ b/NetEvent/Client/Components/ImageValueTypeUpload.razor
@@ -8,7 +8,7 @@
 
     @if (string.IsNullOrEmpty(imageFileName))
     {
-        <MudText Typo="Typo.h6">Drag and drop image here or click</MudText>
+        <MudText Typo="Typo.h6">@Localize["ImageValueTypeUpload.DragAndDropHint"]</MudText>
     }
 
     @if (uploading)
