Add ClientSide Accesibility

--- a/NetEvent/Client/Pages/CompleteRegistration.razor
+++ b/NetEvent/Client/Pages/CompleteRegistration.razor
@@ -1,4 +1,5 @@
 ﻿@page "/register/external/complete"
+<RedirectNotAuthorized />
 
 @inject Microsoft.Extensions.Localization.IStringLocalizer<App> Localize
 
