--- a/NetEvent/Client/Pages/ConfirmationPending.razor
+++ b/NetEvent/Client/Pages/ConfirmationPending.razor
@@ -1,4 +1,5 @@
 ﻿@page "/confirmation/pending"
+<RedirectNotAuthorized />
 
 @inject Microsoft.Extensions.Localization.IStringLocalizer<App> Localize
 
