--- a/NetEvent/Client/Pages/ConfirmationSuccess.razor
+++ b/NetEvent/Client/Pages/ConfirmationSuccess.razor
@@ -1,4 +1,5 @@
 ﻿@page "/confirmation/success"
+<RedirectNotAuthorized />
 
 @inject Microsoft.Extensions.Localization.IStringLocalizer<App> Localize
 
