--- a/NetEvent/Client/_Imports.razor
+++ b/NetEvent/Client/_Imports.razor
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using MudBlazor
 @using NetEvent.Client
 @using NetEvent.Client.Shared
-@using MudBlazor
+@using NetEvent.Client.Components
