Add Settings for Registration

--- a/NetEvent/Client/Pages/Administration/Settings.razor
+++ b/NetEvent/Client/Pages/Administration/Settings.razor
@@ -3,6 +3,7 @@
 @inject Microsoft.Extensions.Localization.IStringLocalizer<App> Localize
 
 @using Microsoft.AspNetCore.Authorization
+@using NetEvent.Client.Components.Administration
 @using NetEvent.Shared.Config
 
 <MudTabs Elevation="2" Rounded="true" ApplyEffectsToContainer="true" PanelClass="pa-6">
@@ -19,28 +20,22 @@
                     <MudGrid>
                         @foreach (var systemSetting in _SystemSettings.OrganizationData)
                         {
-                            <MudItem xs="12" md="6">
-                                @switch (systemSetting.ValueType)
-                                {
-                                    @case StringValueType svt:
-                                        <MudTextField T="string" Value="@GetValue(systemSetting.Key)" ValueChanged="@(v => OnSettingsValueChanged(systemSetting, v))" Label="@Localize[systemSetting.LabelKey]" HelperText="@(string.IsNullOrEmpty(systemSetting.DescriptionKey) ? string.Empty : Localize[systemSetting.DescriptionKey])" Variant="Variant.Outlined" />
-                                        break;
-                                    @case EnumValueType<string> esvt:
-                                        <MudSelect T="string" Value="@GetValue(systemSetting.Key)" ValueChanged="@(v => OnSettingsValueChanged(systemSetting, v))" Label="@Localize[systemSetting.LabelKey]" HelperText="@(string.IsNullOrEmpty(systemSetting.DescriptionKey) ? string.Empty : Localize[systemSetting.DescriptionKey])" Variant="Variant.Outlined" AnchorOrigin="Origin.BottomCenter">
-                                            @foreach (var enumItem in esvt.EnumItems)
-                                            {
-                                                <MudSelectItem Value="@enumItem" />
-                                            }
-                                        </MudSelect>
-                                        break;
-                                    @case ImageValueType ivt:
-                                        <NetEvent.Client.Components.ImageValueTypeUpload ImageValueType="@ivt" SystemSetting="@systemSetting" />
-                                        break;
-                                    @default:
-                                        <div>Missing InputType @systemSetting.ValueType.GetType().Name for Setting @systemSetting.Key with Value- @_OrganizationData.First(x=>x.Key == systemSetting.Key).Value</div>
-                                        break;
-                                }
-                            </MudItem>
+                            <SystemSettingControl SystemSetting="systemSetting" Value="@GetValue(systemSetting.Key)" />
+                        }
+                    </MudGrid>
+                }
+            </MudTabPanel>
+            <MudTabPanel Text="@Localize["Administration.Settings.Authentication"]">
+                @if (_Loading)
+                {
+                    <div>@Localize["Administration.Settings.LoadingData"]</div>
+                }
+                else
+                {
+                    <MudGrid>
+                        @foreach (var systemSetting in _SystemSettings.AuthenticationData)
+                        {
+                            <SystemSettingControl SystemSetting="systemSetting" Value="@GetValue(systemSetting.Key)" />
                         }
                     </MudGrid>
                 }
