--- a/NetEvent/Client/wwwroot/css/mud_customize.css
+++ b/NetEvent/Client/wwwroot/css/mud_customize.css
@@ -6,6 +6,14 @@
     border-style: dashed;
 }
 
+.mud-appbar-content {
+    height: var(--mud-appbar-height);
+}
+
+    .mud-appbar-content * {
+        height: 100%;
+    }
+
 .img-logo {
     max-height: 80%;
     margin-right: 1em;
