--- a/NetEvent/Client/Pages/Administration/AdminMenu.razor
+++ b/NetEvent/Client/Pages/Administration/AdminMenu.razor
@@ -3,6 +3,12 @@
 
 <MudButton Variant="Variant.Text" DisableElevation="true" Color="Color.Default" Href="administration" Match="NavLinkMatch.Prefix">@Localize["Administration.AdminMenu.Dashboard"]</MudButton>
 <MudDivider />
+<AuthorizeView Policy="Admin.Events.*">
+    <Authorized>
+        <MudButton Variant="Variant.Text" DisableElevation="true" Color="Color.Default" Href="administration/events" Match="NavLinkMatch.Prefix">@Localize["Administration.AdminMenu.Events"]</MudButton>
+        <MudDivider />
+    </Authorized>
+</AuthorizeView>
 <AuthorizeView Policy="Admin.Users.*">
     <Authorized>
         <MudButton Variant="Variant.Text" DisableElevation="true" Color="Color.Default" Href="administration/users" Match="NavLinkMatch.Prefix">@Localize["Administration.AdminMenu.Users"]</MudButton>
