--- a/NetEvent/Client/Pages/Administration/Events/Event.razor
+++ b/NetEvent/Client/Pages/Administration/Events/Event.razor
@@ -14,49 +14,64 @@
 
 @if (_Event != null)
 {
-    <MudCard>
+    <MudText Typo="Typo.h2" Class="ma-4">@_Event.Name</MudText>
+
+    <MudCard Class="ma-4">
         <MudForm Model="@_Event" @ref="@_Form" Validation="@(_EventValidator.ValidateValue)" ValidationDelay="0">
+            <MudCardHeader>
+                <CardHeaderContent>
+                    <MudText Typo="Typo.h6">@Localize["Administration.Events.Event.Settings"]</MudText>
+                </CardHeaderContent>
+            </MudCardHeader>
             <MudCardContent>
-                <MudTextField @bind-Value="_Event.Id"
-                          For="@(() => _Event.Id)"
-                          ReadOnly="true"
-                          Immediate="true"
-                          Variant="Variant.Outlined"
-                          Label="@Localize["Administration.Events.Event.Id"]" />
-
-                <MudTextField @bind-Value="_Event.Name"
-                          For="@(() => _Event.Name)"
-                          Immediate="true"
-                          Variant="Variant.Outlined"
-                          Label="@Localize["Administration.Events.Event.Name"]" />
-
-                <MudTextField T="DateTime?"
-                          @bind-Value="_Event.StartDate"
-                          For="@(() => _Event.StartDate)"
-                          Format="s"
-                          Label="DateTimeLocal"
-                          Variant="Variant.Outlined"
-                          InputType="InputType.DateTimeLocal" />
-
-                <MudTextField T="DateTime?"
-                          @bind-Value="_Event.EndDate"
-                          For="@(() => _Event.EndDate)"
-                          Format="s"
-                          Label="DateTimeLocal"
-                          Variant="Variant.Outlined"
-                          InputType="InputType.DateTimeLocal" />
-
-                <MudTextField @bind-Value="_Event.Description"
-                          For="@(() => _Event.Description)"
-                          Immediate="true"
-                          Lines="10"
-                          Variant="Variant.Outlined"
-                          Label="@Localize["Administration.Events.Event.Description"]" />
+                <MudGrid>
+                    <MudItem xs="12">
+                        <MudTextField @bind-Value="_Event.Id"
+                                  For="@(() => _Event.Id)"
+                                  ReadOnly="true"
+                                  Immediate="true"
+                                  Variant="Variant.Outlined"
+                                  Label="@Localize["Administration.Events.Event.Id"]" />
+                    </MudItem>
+                    <MudItem xs="12">
+                        <MudTextField @bind-Value="_Event.Name"
+                                  For="@(() => _Event.Name)"
+                                  Immediate="true"
+                                  Variant="Variant.Outlined"
+                                  Label="@Localize["Administration.Events.Event.Name"]" />
+                    </MudItem>
+                    <MudItem xs="12" sm="6">
+                        <MudTextField T="DateTime?"
+                                  @bind-Value="_Event.StartDate"
+                                  For="@(() => _Event.StartDate)"
+                                  Format="s"
+                                  Label="@Localize["Administration.Events.Event.StartDate"]"
+                                  Variant="Variant.Outlined"
+                                  InputType="InputType.DateTimeLocal" />
+                    </MudItem>
+                    <MudItem xs="12" sm="6">
+                        <MudTextField T="DateTime?"
+                                  @bind-Value="_Event.EndDate"
+                                  For="@(() => _Event.EndDate)"
+                                  Format="s"
+                                  Label="@Localize["Administration.Events.Event.EndDate"]"
+                                  Variant="Variant.Outlined"
+                                  InputType="InputType.DateTimeLocal" />
+                    </MudItem>
+                    <MudItem xs="12">
+                        <MudTextField @bind-Value="_Event.Description"
+                                  For="@(() => _Event.Description)"
+                                  Immediate="true"
+                                  Lines="10"
+                                  Variant="Variant.Outlined"
+                                  Label="@Localize["Administration.Events.Event.Description"]" />
+                    </MudItem>
+                </MudGrid>
             </MudCardContent>
         </MudForm>
         <MudCardActions>
             <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="ml-auto" OnClick="@(async () => await SaveEvent())">
-                @(_Event.Id >= 0 ? Localize["Administration.Events.Event.Edit"] : Localize["Administration.Events.Event.Create"])
+                @(_Event.Id >= 0 ? Localize["Administration.Events.Event.Save"] : Localize["Administration.Events.Event.Create"])
             </MudButton>
         </MudCardActions>
     </MudCard>
