Add TinyMce as WYSIWYG Editor

--- a/NetEvent/Client/Pages/Administration/Events/Event.razor
+++ b/NetEvent/Client/Pages/Administration/Events/Event.razor
@@ -6,6 +6,7 @@
 @using NetEvent.Client.Components
 @using NetEvent.Client.Components.Administration
 @using NetEvent.Shared.Config
+@using TinyMCE.Blazor
 
 @if (_Loading)
 {
@@ -59,12 +60,15 @@
                                   InputType="InputType.DateTimeLocal" />
                     </MudItem>
                     <MudItem xs="12">
-                        <MudTextField @bind-Value="_Event.Description"
-                                  For="@(() => _Event.Description)"
-                                  Immediate="true"
-                                  Lines="10"
-                                  Variant="Variant.Outlined"
-                                  Label="@Localize["Administration.Events.Event.Description"]" />
+
+                        <Editor @bind-Value="_Event.Description" ScriptSrc="/lib/tinymce/tinymce.min.js" ValidateOnInput="true" Conf="NetEvent.Client.Extensions.TinyMceConfig.EditorConf" />
+
+                        @*    <MudTextField @bind-Value="_Event.Description"
+                    For="@(() => _Event.Description)"
+                    Immediate="true"
+                    Lines="10"
+                    Variant="Variant.Outlined"
+                    Label="@Localize["Administration.Events.Event.Description"]" />*@
                     </MudItem>
                 </MudGrid>
             </MudCardContent>
