--- a/NetEvent/Client/Pages/Administration/Events/Event.razor
+++ b/NetEvent/Client/Pages/Administration/Events/Event.razor
@@ -6,6 +6,7 @@
 @using NetEvent.Client.Components
 @using NetEvent.Client.Components.Administration
 @using NetEvent.Shared.Config
+@using NetEvent.Shared.Dto
 @using TinyMCE.Blazor
 
 @if (_Loading)
@@ -17,6 +18,9 @@
 {
     <MudText Typo="Typo.h2" Class="ma-4">@_Event.Name</MudText>
 
+    <MudGrid>
+        <MudItem xs="12" md="8" lg="6">
+
     <MudCard Class="ma-4">
         <MudForm Model="@_Event" @ref="@_Form" Validation="@(_EventValidator.ValidateValue)" ValidationDelay="0">
             <MudCardHeader>
@@ -26,25 +30,58 @@
             </MudCardHeader>
             <MudCardContent>
                 <MudGrid>
-                    <MudItem xs="12">
-                        <MudTextField @bind-Value="_Event.Id"
+                    @if (_Event.Id > 0)
+                    {
+                        <MudItem xs="2" md="1">
+                            <MudTextField @bind-Value="_Event.Id"
                                   For="@(() => _Event.Id)"
+                                  Margin="Margin.Dense"
                                   ReadOnly="true"
                                   Immediate="true"
                                   Variant="Variant.Outlined"
                                   Label="@Localize["Administration.Events.Event.Id"]" />
-                    </MudItem>
-                    <MudItem xs="12">
+                        </MudItem>
+                    }
+
+                    <MudItem xs="@(_Event.Id > 0 ? 4 : 6)" md="@(_Event.Id > 0 ? 5 : 6)">
+
                         <MudTextField @bind-Value="_Event.Name"
                                   For="@(() => _Event.Name)"
+                                  Margin="Margin.Dense"
                                   Immediate="true"
                                   Variant="Variant.Outlined"
                                   Label="@Localize["Administration.Events.Event.Name"]" />
+                    </MudItem>
+                    <MudItem xs="6" sm="3">
+                        <MudSelect @bind-Value="_Event.State"
+                               For="@(() => _Event.State)"
+                               Margin="Margin.Dense"
+                               Label="@Localize["Administration.Events.Event.PublishState"]"
+                               Variant="Variant.Outlined"
+                               AnchorOrigin="Origin.BottomCenter">
+                            @foreach (var publishState in Enum.GetValues<PublishStateDto>())
+                            {
+                                <MudSelectItem Value="@publishState">@Localize["Administration.Events.Event.PublishState." + @publishState.ToString()]</MudSelectItem>
+                            }
+                        </MudSelect>
+                    </MudItem>
+                    <MudItem xs="6" sm="3">
+                        <MudSelect @bind-Value="_Event.Visibility"
+                               For="@(() => _Event.Visibility)"
+                               Margin="Margin.Dense"
+                               Label="@Localize["Administration.Events.Event.VisibilityState"]"
+                               Variant="Variant.Outlined" AnchorOrigin="Origin.BottomCenter">
+                            @foreach (var visibilityState in Enum.GetValues<VisibilityStateDto>())
+                            {
+                                <MudSelectItem Value="@visibilityState">@Localize["Administration.Events.Event.VisibilityState." + @visibilityState.ToString()]</MudSelectItem>
+                            }
+                        </MudSelect>
                     </MudItem>
                     <MudItem xs="12" sm="6">
                         <MudTextField T="DateTime?"
                                   @bind-Value="_Event.StartDate"
                                   For="@(() => _Event.StartDate)"
+                                  Margin="Margin.Dense"
                                   Format="s"
                                   Label="@Localize["Administration.Events.Event.StartDate"]"
                                   Variant="Variant.Outlined"
@@ -54,14 +91,17 @@
                         <MudTextField T="DateTime?"
                                   @bind-Value="_Event.EndDate"
                                   For="@(() => _Event.EndDate)"
+                                  Margin="Margin.Dense"
                                   Format="s"
                                   Label="@Localize["Administration.Events.Event.EndDate"]"
                                   Variant="Variant.Outlined"
                                   InputType="InputType.DateTimeLocal" />
                     </MudItem>
                     <MudItem xs="12">
-                        <MudField Label="@Localize["Administr ation.Events.Event.Description"]" Variant="Variant.Outlined">
-                            <Editor @bind-value="_Event.Description" ScriptSrc="/lib/tinymce/tinymce.min.js" ValidateOnInput="true" Conf="NetEvent.Client.Extensions.TinyMceConfig.EditorConf" />
+                        <MudField Label="@Localize["Administration.Events.Event.Description"]"
+                              Margin="Margin.Dense"
+                              Variant="Variant.Outlined">
+                            <Editor @bind-Value="_Event.Description" ScriptSrc="/lib/tinymce/tinymce.min.js" ValidateOnInput="true" Conf="NetEvent.Client.Extensions.TinyMceConfig.EditorConf" />
                         </MudField>
 
                     </MudItem>
@@ -73,5 +113,7 @@
                 @(_Event.Id >= 0 ? Localize["Administration.Events.Event.Save"] : Localize["Administration.Events.Event.Create"])
             </MudButton>
         </MudCardActions>
-    </MudCard>
+            </MudCard>
+        </MudItem>
+    </MudGrid>
 }
