--- a/NetEvent/Client/Pages/Administration/Events/Events.razor
+++ b/NetEvent/Client/Pages/Administration/Events/Events.razor
@@ -6,13 +6,14 @@
 @using Microsoft.AspNetCore.Authorization
 @using NetEvent.Client.Components
 @using NetEvent.Client.Components.Administration
+@using NetEvent.Client.Extensions
 @using NetEvent.Shared.Config
 
 
 
 <MudPaper Class="d-flex align-stretch flex-wrap gap-4 ma-4" Elevation="0">
 
-    <MudButton Class="d-flex flex-grow-1 flex-column" Style="width: 200px; max-width: 300px;" Variant="Variant.Outlined" Color="Color.Primary" StartIcon="@Icons.Material.Outlined.Add" Href="@GetEventLink("new")">@Localize["Administration.Events.Event.Create"]</MudButton>
+    <MudButton Class="d-flex flex-grow-1 flex-column" Style="width: 200px; max-width: 300px;" Variant="Variant.Outlined" Color="Color.Primary" StartIcon="@Icons.Material.Outlined.Add" Href="@UrlHelper.GetEventLink("new")">@Localize["Administration.Events.Event.Create"]</MudButton>
 
     @if (_Loading)
     {
@@ -24,7 +25,14 @@
         <MudCard Class="d-flex flex-grow-1 flex-column" Style="width: 200px; max-width: 300px;">
             <MudCardHeader>
                 <CardHeaderContent>
-                    <MudText Typo="Typo.h6">@eventDto.Name</MudText>
+                    <MudPaper Class="d-flex flex-row" Elevation="0">
+                        <MudText Typo="Typo.h6">@eventDto.Name</MudText>
+                        <MudSpacer />
+                        <MudTooltip Text="@Localize["Administration.Events.Event.Show"]">
+                            <MudButton Variant="Variant.Text" Color="Color.Primary" Href="@UrlHelper.GetEventLink(eventDto.Id!, false)" StartIcon="@Icons.Material.Outlined.TapAndPlay"></MudButton>
+                        </MudTooltip>
+                    </MudPaper>
+
                     <MudText Typo="Typo.body2">@eventDto.StartDate?.ToString("d", CultureInfo.CurrentUICulture) - @eventDto.EndDate?.ToString("d", CultureInfo.CurrentUICulture)</MudText>
 
                 </CardHeaderContent>
@@ -34,13 +42,13 @@
                 </CardHeaderActions>
             </MudCardHeader>
             <MudCardContent Class="flex-grow-1">
-                @if (eventDto.Description != null)
+                @if (eventDto.ShortDescription != null)
                 {
-                    <MudText Typo="Typo.body2">@((MarkupString)eventDto.Description)</MudText>
+                    <MudText Typo="Typo.body2" Style="max-height:200px;">@((MarkupString)eventDto.ShortDescription)</MudText>
                 }
             </MudCardContent>
             <MudCardActions>
-                <MudButton Variant="Variant.Text" Color="Color.Primary" Href="@GetEventLink(eventDto.Id!)" StartIcon="@Icons.Material.Outlined.Edit">@Localize["Administration.Events.Event.Edit"]</MudButton>
+                <MudButton Variant="Variant.Text" Color="Color.Primary" Href="@UrlHelper.GetEventLink(eventDto.Id!)" StartIcon="@Icons.Material.Outlined.Edit">@Localize["Administration.Events.Event.Edit"]</MudButton>
                 <MudButton Variant="Variant.Text" Color="Color.Error" OnClick="@(async () => await DeleteEvent(eventDto))" StartIcon="@Icons.Material.Outlined.Delete">@Localize["Administration.Events.Event.Delete"]</MudButton>
             </MudCardActions>
         </MudCard>
