--- a/NetEvent/Client/Pages/Administration/Index.razor
+++ b/NetEvent/Client/Pages/Administration/Index.razor
@@ -11,10 +11,20 @@
             <MudStack AlignItems="AlignItems.Stretch">
                 <MudButton Variant="Variant.Filled" Href="/administration/users" Class="pa-4" Style="height: 200px;">
                     <MudStack Row="true">
-                        <MudIcon Icon="@Icons.Outlined.Group" Size="Size.Large">@Localize["Administration.Index.Users"]</MudIcon>
+                        <MudIcon Icon="@Icons.Outlined.Group" Size="Size.Large"></MudIcon>
                         <MudText Typo="Typo.h6"><strong>@Users?.Count</strong> @Localize["Administration.Index.Users"]</MudText>
                     </MudStack>
                 </MudButton>                
+            </MudStack>
+        </MudItem>
+        <MudItem xs="12" sm="6" md="4">
+            <MudStack AlignItems="AlignItems.Stretch">
+                <MudButton Variant="Variant.Filled" Href="/administration/events" Class="pa-4" Style="height: 200px;">
+                    <MudStack Row="true">
+                        <MudIcon Icon="@Icons.Outlined.Event" Size="Size.Large"></MudIcon>
+                        <MudText Typo="Typo.h6"><strong>@Events?.Count</strong> @Localize["Administration.Index.Events"]</MudText>
+                    </MudStack>
+                </MudButton>
             </MudStack>
         </MudItem>
         <MudItem xs="12" sm="6" md="4">
