--- a/NetEvent/Client/Pages/Events/Event.razor
+++ b/NetEvent/Client/Pages/Events/Event.razor
@@ -5,6 +5,7 @@
 @using Microsoft.AspNetCore.Authorization
 @using NetEvent.Client.Components
 @using NetEvent.Client.Components.Administration
+@using NetEvent.Client.Extensions
 @using NetEvent.Shared.Config
 @using NetEvent.Shared.Dto
 @using System.Globalization
@@ -34,7 +35,7 @@
 
         <AuthorizeView Policy="Admin.Events.Edit">
             <Authorized>
-                <MudButton Variant="Variant.Text" Color="Color.Primary" Href="@GetEventLink(_Event.Id!)" StartIcon="@Icons.Material.Outlined.Edit">@Localize["Administration.Events.Event.Edit"]</MudButton>
+                <MudButton Variant="Variant.Text" Color="Color.Primary" Href="@UrlHelper.GetEventLink(_Event.Id!)" StartIcon="@Icons.Material.Outlined.Edit">@Localize["Administration.Events.Event.Edit"]</MudButton>
             </Authorized>
         </AuthorizeView>
     }
