--- a/NetEvent/Client/Shared/MainLayout.razor
+++ b/NetEvent/Client/Shared/MainLayout.razor
@@ -18,12 +18,13 @@
                 <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
             </Authorized>
         </AuthorizeView>
-        @if (!string.IsNullOrEmpty(_Logo))
-        {
-            <MudImage Src="@_Logo" Class="img-logo"></MudImage>
-        }
-        <h1>@_OrganizationName</h1>
-        <MudSpacer />
+        <MudButton Variant="Variant.Filled" DisableElevation="true" Color="Color.Primary" Href="/" Match="NavLinkMatch.Prefix">
+            @if (!string.IsNullOrEmpty(_Logo))
+            {
+                <MudImage Src="@_Logo" Class="img-logo"></MudImage>
+            }
+            <h1>@_OrganizationName</h1>
+        </MudButton>
         <NavigationBar />
     </MudAppBar>
     <AuthorizeView Policy="Admin.*">
