--- a/NetEvent/Client/Pages/Administration/Index.razor
+++ b/NetEvent/Client/Pages/Administration/Index.razor
@@ -1,4 +1,4 @@
-﻿@page "/administration"
+﻿@page "/administration/dashboard"
 @using Microsoft.AspNetCore.Authorization
 @inject Microsoft.Extensions.Localization.IStringLocalizer<App> Localize
 @*@layout MainLayout*@
